crates/vize_croquis/src/snapshots/vize_croquis__virtual_ts__tests__generate_template.snap
---
source: crates/vize_croquis/src/virtual_ts.rs
expression: output.content.as_str()
---
// Virtual TypeScript for template type checking
// Generated by vize_croquis

// Context from script setup
declare const __ctx: { message: any };
const { message } = __ctx;

const $attrs: Readonly<Record<string, unknown>> = {};
// Template expressions
const __expr_0 = message;
