crates/vize_croquis/src/snapshots/vize_croquis__virtual_ts__tests__snapshot_template_with_v_for.snap
---
source: crates/vize_croquis/src/virtual_ts.rs
expression: output.content
---
// Virtual TypeScript for template type checking
// Generated by vize_croquis

// Context from script setup
declare const __ctx: { items: any };
const { items } = __ctx;

const $attrs: Readonly<Record<string, unknown>> = {};
// Template expressions
// v-for scope
{
  const __expr_0 = items;
  for (const [index, item] of Array.from(__expr_0).entries()) {
    const __expr_1 = item.id;
    const __expr_2 = item.name;
    const __expr_3 = index;
  }
}
