crates/vize_croquis/src/snapshots/vize_croquis__virtual_ts__tests__snapshot_template_with_v_if.snap
---
source: crates/vize_croquis/src/virtual_ts.rs
expression: output.content
---
// Virtual TypeScript for template type checking
// Generated by vize_croquis

// Context from script setup
declare const __ctx: { isVisible: any, isAlternate: any };
const { isVisible, isAlternate } = __ctx;

const $attrs: Readonly<Record<string, unknown>> = {};
// Template expressions
if (isVisible) {
}
if (isAlternate) {
}
